# BiKiPy

./: .editorconfig  .gitignore  .travis.yml  DLC example.ipynb  DLCA example.ipynb  DLC_analysis_settings.py  DLC_tools.py  README.md  Vector2D.py  analysis_settings.py  animal_position_preference.py  csv_reader.py  pyproject.toml  requirements.txt  setup.py  test.py  travis.yaml
bikipy/: preference.py  readers.py  utils.py  video_analysis.py
bikipy/compute/: __init__.py  angle.py  midpoints.py
bikipy/utils/: data.py  deeplabcut.py  statistics.py  validators.py  video.py
data/: test_tracking.csv
demonstration/: pandas_test.py
dlca/: setup.py
dlca/dlca/: __init__.py  analysis.py  angle.py  mechanics.py  position.py  readers.py  represent.py  video_analysis.py
dlca/dlca/functions/: event_data_getters.py  hviva.py
example_data/: jup_prep.pckl
kinpy/: __init__.py  position.py  preference.py  readers.py  video_analysis.py
kinpy/compute/: __init__.py  angle.py  midpoints.py
kinpy/compute/remove_flicks/: __init__.py  _event_data_getters.py  analyze_flicks.py
output/: boxplot.py
pip-wheel-metadata/kinpy-0.1.0.dist-info/: METADATA
scripts/: DLCA example.ipynb  DLCPos_ipynb_prep.py  pos_pref_analyser.py  settings.py  video_crop.py
tests/: readers_test.py  test_readers.py
tests/compute/: __init__.py  test_angle.py  test_midpoints.py
tests/example_data/: data_for_angle.h5
tests/utils/: test_deeplabcut.py  test_statistics.py
