[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "kinpy"
version = "0.1.0"
license = "BSD-3-Clause"
description = "Liberary for automatic analysis of kinematic data"
authors = ["Can H. Tartanoglu <canhtart@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.0"
pandas = "^1.0.5"
tables = "^3.6.1"
matplotlib = "^3.2.2"
opencv-python = {version = "^4.2.0", optional = true }

[tool.poetry.dev-dependencies]
black = "^19.10b0"
