[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "kinpy"
version = "0.2.0"
license = "BSD-3-Clause"
description = "Liberary for automatic analysis of kinematic data"
authors = ["Can H. Tartanoglu <canhtart@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.4"
numpy = "^1.19.0"
pandas = "^1.0.5"
tables = "^3.6.1"
matplotlib = "^3.2.2"
opencv-python = {version = "^4.2.0", optional = true }

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^5.4.3"
commitizen = "^1.23.0"
pre-commit = "^2.5.1"

[tool.black]
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
 /(
     \.eggs         # exclude a few common directories in the
   | \.git          # root of the project
   | \.hg
   | \.mypy_cache
   | \.tox
   | \.venv
   | _build
   | buck-out
   | build
   | dist
   | docs
 )/
)
'''
