[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "bikipy"
version = "0.2.2"
license = "LGPL-3.0-or-later"
description = "Liberary for automatic analysis of kinematic data"
authors = ["Can H. Tartanoglu <canhtart@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6.1,<4.0.0"
numpy = "^1.19.0"
pandas = "^1.0.5"
tables = "^3.6.1"
matplotlib = "^3.2.2"
opencv-python = {version = "4.2.0.34", optional = true }

[tool.poetry.extras]
opencv = ["opencv-python"]

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^5.4.3"
commitizen = "^1.23.0"
pre-commit = "^2.5.1"
opencv-python = "4.2.0.34"

[tool.black]
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
 /(
     \.eggs         # exclude a few common directories in the
   | \.git          # root of the project
   | \.hg
   | \.mypy_cache
   | \.tox
   | \.venv
   | _build
   | buck-out
   | build
   | dist
   | docs
 )/
)
'''
